# FDesktopRecorder

./: .gitignore  .gitignore~  CHANGELOG  CHANGELOG~  CMakeLists.txt  FDesktopRecorder.pro  IDEAS  README  README.md  Readme.txt  Readme.txt~  TODO  aboutprog.cpp  aboutprog.h  aboutprog.ui  configurationfile.cpp  configurationfile.h  dialogterminaloutput.cpp  dialogterminaloutput.h  dialogterminaloutput.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recordingdevices.cpp  recordingdevices.h  resources.qrc  runterminal.cpp  runterminal.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  windowgrapper.cpp  windowgrapper.h
Desktop/: FDesktopRecorder.desktop
RPM (buildservice)/: FDesktopRecorder.changes  FDesktopRecorder.desktop  FDesktopRecorder.desktop~  FDesktopRecorder.notifyrc  FDesktopRecorder.spec  FDesktopRecorder.spec~  Update FDesktopRecorder.sh  Update FDesktopRecorder.sh~  UpdateZipFile.sh
RPM (buildservice)/.osc/: FDesktopRecorder.spec  _build_repositories  _buildconfig-Fedora_16-x86_64  _buildconfig-openSUSE_12.1-x86_64  _buildinfo-Fedora_16-x86_64.xml  _buildinfo-openSUSE_12.1-i586.xml  _buildinfo-openSUSE_12.1-x86_64.xml  _files  _meta  _package  _project
abandoned/: README
abandoned/CentOS RPM-specfile/: FDesktopRecorder.spec
desktop/: CMakeLists.txt  FDesktopRecorder.desktop  fdesktoprecorder.desktop
knotification/: CMakeLists.txt  FDesktopRecorder.notifyrc  fdesktoprecorder.notifyrc
source/: CHANGELOG  CMakeLists.txt  FDesktopRecorder.pro  aboutprog.cpp  aboutprog.ui  configurationfile.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  previewplayer.cpp  previewplayer.h  previewplayer.ui  process.cpp  process.h  recordingdevices.cpp  recordingdevices.h  resources.qrc  rubberband.cpp  rubberband.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingsmanager.cpp  settingsmanager.h  windowgrapper.h
source/.tx/: config  config~
source/dialogs/about/: aboutprog.cpp  aboutprog.h  aboutprog.ui
source/dialogs/settingsdialog/: settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
source/module/: process.cpp  process.h  recordingdevices.cpp  recordingdevices.h  settingsmanager.cpp  settingsmanager.h
source/translations/: FDesktopRecorder_da_DK.qm  FDesktopRecorder_da_DK.ts  FDesktopRecorder_de_DE.qm  FDesktopRecorder_de_DE.ts  FDesktopRecorder_es_ES.qm  FDesktopRecorder_es_ES.ts  FDesktopRecorder_it_IT.qm  FDesktopRecorder_it_IT.ts  FDesktopRecorder_ro_RO.qm  FDesktopRecorder_ro_RO.ts  FDesktopRecorder_untranslated.ts
source/translations/FDesktopRecorder.main/: da_DK.qm  da_DK.ts  de_DE.qm  de_DE.ts  es_ES.qm  es_ES.ts  it_IT.qm  it_IT.ts  ro_RO.qm  ro_RO.ts
source/utils/: windowgrapper.cpp
src/: CMakeLists.txt  FDesktopRecorder.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/dialogs/about/: aboutprog.cpp  aboutprog.h  aboutprog.ui
src/dialogs/settingsdialog/: settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/module/: process.cpp  recordingdevices.cpp  settingsmanager.cpp  settingsmanager.h
src/plugins/: pluginmanager.cpp  pluginmanager.h
src/plugins/RecordingInfo/: CMakeLists.txt  PluginInterface.h  recordinginfo.cpp  recordinginfo.h  recordinginfo.pro
src/translations/: FDesktopRecorder_untranslated.qm  FDesktopRecorder_untranslated.ts  update-translations.sh
src/translations/FDesktopRecorder.main/: ast.ts  da_DK.qm  da_DK.ts  de_DE.qm  de_DE.ts  el_GR.qm  el_GR.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  hu_HU.qm  hu_HU.ts  it_IT.qm  it_IT.ts  pl_PL.qm  pl_PL.ts  pt_BR.qm  pt_BR.ts  ro_RO.qm  ro_RO.ts  ru_RU.qm  ru_RU.ts  tr_TR.qm  tr_TR.ts  uk_UA.qm  uk_UA.ts  vi.qm  vi.ts  zh_CN.qm  zh_CN.ts
src/utils/: areaselectordialog.cpp  areaselectordialog.h  areaselectordialog.ui  rubberband.cpp  userdirreader.cpp  userdirreader.h
translations/: FDesktopRecorder_da_DK.qm  FDesktopRecorder_da_DK.ts  FDesktopRecorder_de_DE.qm  FDesktopRecorder_de_DE.ts
